# nixui

./: .gitignore  Cargo.toml  README.md  REUSE.toml  configuration.nix  deny.toml  flake.nix
src/: main.rs
