[package]
name = "nixui"
version = "0.1.0"
edition = "2024"

[dependencies]
nix-editor = "0.3.0"
feather-ui = { git = "https://github.com/Fundament-Software/feathergui" }
feather-macro = { git = "https://github.com/Fundament-Software/feathergui" }
ultraviolet = "0.10.0"
im = "15.1.0"
winit = "0.30.11"
glyphon = "0.9.0"
